5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/223/users/4180/executions/1807_2569.log
== TEST (2019-06-10 07:36:40) 
-- CODE:
from numpy import*
x = array(
m = mean(x)
n = size(x)
p = 0
for i in range(size(x)):
	p = p + (x[i] - m)**2
div = p/(n -1)
	
d = (div)**0.5
print(round(d,3))
-- ERROR:
File "XXXX", line 4
    n = size(x)
    ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:39:51) 
-- CODE:
from numpy import*
x = array(eval(input(":")))
m = mean(x)
n = size(x)
p = 0
for i in range(size(x)):
	p = p + (x[i] - m)**2
div = p/(n -1)
	
d = (div)**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:40:13) 
-- CODE:
from numpy import*
x = array(eval(input(":")))
m = mean(x)
n = size(x)
p = 0
for i in range(size(x)):
	p = p + (x[i] - m)**2
div = p/(n -1)
	
d = (div)**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-06-10 07:41:00) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
m = mean(x)
n = size(x)
p = 0
for i in range(size(x)):
	p = p + (x[i] - m)**2
div = p/(n -1)
	
d = (div)**0.5
print(round(d,3))
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 1, in <module>
    from numpy import*
ModuleNotFoundError: No module named 'numpy'
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-06-10 07:41:14) 
-- CODE:
from numpy import*
x = array(eval(input("Sequencia de numeros:")))
m = mean(x)
n = size(x)
p = 0
for i in range(size(x)):
	p = p + (x[i] - m)**2
div = p/(n -1)
	
d = (div)**0.5
print(round(d,3))
-- EXECUTION TIME:
1.01342
-- TEST CASE 1:
---- input:
[-4,250,-1,30,12]
---- correct output:
108.498
---- user output:
108.498
-- TEST CASE 2:
---- input:
[12.5,25.2,50.39,47.3,0.9]
---- correct output:
21.526
---- user output:
21.526
-- TEST CASE 3:
---- input:
[1.5,1.9,1.2,1.3,1.4,1.1,1.75]

---- correct output:
0.29
---- user output:
0.29
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
